<resources>
    <string name="app_name">JustJava</string>
    <string name="_0">0</string>
    <string name="quantity">QUANTITY</string>
    <string name="order">Order</string>
    <string name="price">Price Of Coffee</string>
    <string name="paper_cup_price">Paper Cup Price</string>
    <string name="total_price">Total Price</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dollar">$0</string>
    <string name="name">Name</string>
    <string name="order_summary">Order Summary</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate_chips">Chocolate Chips</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="order_your_coffee_here">Order your coffee here</string>
    <string name="coffee_up">Coffee Up</string>
</resources>